# skyportalai

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-checklist.yml  publish.yml
docs/: agent.md  architecture.md  deployment.md
scripts/: render_readme_demo.py
skyportal/: __init__.py  animation.py  cli.py  config.py  portal.py  shell.py
skyportalai/: __init__.py  _client.py  _exceptions.py  chat.py  types.py
skyportalai/agent/: __init__.py  __main__.py  catalog.py  config.py  health.py  queue.py  runner.py  shipper.py
skyportalai/agent/scrapers/: __init__.py  base_scanner.py  mlflow_rest_scanner.py  mlflow_scanner.py  wandb_scanner.py
skyportalai/cli/: __init__.py  ansible.py  chat.py  config.py  context.py  kubernetes.py  main.py  output.py
skyportalai/resources/: ansible.py  chat.py  kubernetes.py  me.py
tests/: test_agent_catalog.py  test_agent_config.py  test_agent_health.py  test_agent_main.py  test_agent_mlflow_rest.py  test_agent_queue.py  test_agent_runner.py  test_agent_scrapers.py  test_agent_shipper.py  test_animation.py  test_ansible.py  test_chat.py  test_cli_ansible.py  test_cli_chat.py  test_cli_config.py  test_cli_kubernetes.py  test_cli_main.py  test_client_config.py  test_exceptions.py  test_kubernetes.py  test_legacy_cli_multihost.py  test_me.py  test_portal.py  test_public_api.py  test_shell_cancel.py  test_shell_multihost.py  test_shell_permission.py  test_shell_resume.py  test_shell_servers.py  test_shell_streaming.py  test_shell_tool_rendering.py  test_transport.py  test_types.py
